fix all controllers